--- a/listinteraction.ui
+++ b/listinteraction.ui
@@ -14,7 +14,7 @@
    <string>Liste des intéractions</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="DataListInteraction">
     <property name="geometry">
      <rect>
       <x>30</x>
