Affichage interaction d'un contact et suppression
reste ajout interaction et modification

--- a/listinteraction.ui
+++ b/listinteraction.ui
@@ -6,33 +6,69 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1026</width>
+    <height>621</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Liste des intéractions</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="DataListInteraction">
+   <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>30</y>
-      <width>741</width>
-      <height>311</height>
+      <width>571</width>
+      <height>441</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string>Date</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Contenu de l'interaction</string>
-     </property>
-    </column>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QTableWidget" name="DataListInteraction">
+       <column>
+        <property name="text">
+         <string>Date</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Contenu</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>id</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QPushButton" name="addInteractionPb">
+         <property name="text">
+          <string>Ajouter interaction</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="editInteractionPb">
+         <property name="text">
+          <string>Modifier interaction</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="deleteInteractionPb">
+         <property name="text">
+          <string>Supprimer interaction</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -40,8 +76,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>22</height>
+     <width>1026</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
